# vubi

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
include/vubi/: application.h  renderer.h  sdl_utilities.h  window.h
src/: CMakeLists.txt  application.cpp  renderer.cpp  sdl_utilities.cpp  window.cpp
tests/: CMakeLists.txt  sdl_utilities_test.cpp  window_test.cpp
